--- a/Assets/Plugins/IOS/Resource/TDS-Info.plist
+++ b/Assets/Plugins/IOS/Resource/TDS-Info.plist
@@ -5,7 +5,7 @@
     <key>taptap</key>
     <dict>
         <key>client_id</key>
-        <string>p60jgYd4FUWc4Rr8pK</string>
+        <string>uNS7fT9rTgG010leoG</string>
     </dict>
     
     <key>NSPhotoLibraryUsageDescription</key>
@@ -16,6 +16,5 @@
     <string>App需要您的同意,才能访问麦克风</string>
     <key>NSUserTrackingUsageDescription</key>
     <string>App需要追踪你的信息</string>
-    
 </dict>
 </plist>
