--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
-    "com.tds.sdk": "https://github.com/xindong/TAPSDK_UPM.git#1.0.2.3-alpha-rnd",
     "com.tds.global": "file:../TDSGlobal",
+    "com.tds.sdk": "https://github.com/xindong/TAPSDK_UPM.git#1.0.2.3-alpha-rnd",
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.2",
@@ -10,6 +12,7 @@
     "com.unity.textmeshpro": "3.0.1",
     "com.unity.timeline": "1.3.5",
     "com.unity.ugui": "1.0.0",
+    "com.unity.xr.legacyinputhelpers": "2.1.4",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
