feat:修改iOS framework

--- a/TDSGlobal/Plugins/iOS/Resource/TDSGlobalSDKResources.bundle/TDSGlobalMultiLanguageConfig.json
+++ b/TDSGlobal/Plugins/iOS/Resource/TDSGlobalSDKResources.bundle/TDSGlobalMultiLanguageConfig.json
@@ -41,7 +41,7 @@
       "tds_network_error_retry": "网络异常，点击屏幕重试",
       "tds_login_success": "登录成功",
       "tds_login_cancel": "授权已取消",
-      "tds_login_failed": "登录失败",
+      "tds_login_failed": "登录失败,请稍候重试",
       "tds_login_button_title":"通过 %s 登录",
       "tds_logout": "已退出登录",
       "tds_authorization_cancel": "授权已取消",
@@ -111,7 +111,7 @@
       "tds_current_id": "ID：%s",
       "tds_copy_success": "Успешно скопировано",
       "tds_cancel_bind": "Вы отвязали аккаунт",
-      "tds_unbind_error": "解绑失败",
+      "tds_unbind_error": "Не удалось отвязать",
       "tds_bind_error_reason_format": "Не удалось привязать. %s аккаунт уже привязан",
       "tds_bind_error": "Ошибка",
       "tds_bind_success": "Привязка успешна",
@@ -123,7 +123,7 @@
       "tds_network_error_retry": "Ошибка сети. Нажмите на экран, чтобы повторить попытку",
       "tds_login_success": "Вход выполнен",
       "tds_login_cancel": "Авторизация аннулирована",
-      "tds_login_failed": "登录失败",
+      "tds_login_failed": "Не удалось войти, попробуйте позже",
       "tds_login_button_title":"Вход с %s",
       "tds_logout": "Выйти",
       "tds_authorization_cancel": "Авторизация аннулирована",
@@ -192,7 +192,7 @@
       "tds_current_id": "ID：%s",
       "tds_copy_success": "Kopyalandı",
       "tds_cancel_bind": "Hesap ayrıldı",
-      "tds_unbind_error": "解绑失败",
+      "tds_unbind_error": "Bağlantı iptal edilemedi",
       "tds_bind_error_reason_format": "Bağlama başarısız. %s hesabı bağlandı",
       "tds_bind_error": "Bağlama başarısız",
       "tds_bind_success": "Bağlandı",
@@ -204,7 +204,7 @@
       "tds_network_error_retry": "Bağlantı hatası. Ekrana tıklayarak tekrar deneyin",
       "tds_login_success": "Giriş yapıldı",
       "tds_login_cancel": "İzin iptal edildi",
-      "tds_login_failed": "登录失败",
+      "tds_login_failed": "Giriş yapılamadı, daha sonra tekrar deneyin",
       "tds_login_button_title":"%s ile Giriş Yap",
       "tds_logout": "Çıkış Yapıldı",
       "tds_authorization_cancel": "İzin iptal edildi",
@@ -273,7 +273,7 @@
       "tds_current_id": "ID：%s",
       "tds_copy_success": "Copiado con éxito",
       "tds_cancel_bind": "Ha desvinculado",
-      "tds_unbind_error": "解绑失败",
+      "tds_unbind_error": "Error al desenlazar",
       "tds_bind_error_reason_format": "Vinculación fallida. La cuenta  %s ya ha sido vinculada",
       "tds_bind_error": "Vinculación fallida",
       "tds_bind_success": "Vinculado con éxito",
@@ -285,7 +285,7 @@
       "tds_network_error_retry": "Error de red. Toque la pantalla para intentarlo de nuevo",
       "tds_login_success": "Sesión iniciada",
       "tds_login_cancel": "Autorización anulada",
-      "tds_login_failed": "登录失败",
+      "tds_login_failed": "Error al iniciar sesión, inténtalo de nuevo",
       "tds_login_button_title":"Iniciar sesión con %s",
       "tds_logout": "Se ha desconectado",
       "tds_authorization_cancel": "Autorización anulada",
@@ -354,7 +354,7 @@
       "tds_current_id": "ID：%s",
       "tds_copy_success": "Copiado com sucesso",
       "tds_cancel_bind": "Você desvinculou a conta",
-      "tds_unbind_error": "解绑失败",
+      "tds_unbind_error": "Falha na desvinculação",
       "tds_bind_error_reason_format": "Falha ao vincular conta! A conta de %s já está vinculada!",
       "tds_bind_error": "Vínculo falhou",
       "tds_bind_success": "Vinculada com sucesso",
@@ -366,7 +366,7 @@
       "tds_network_error_retry": "A rede está anormal, clique na tela para tentar novamente",
       "tds_login_success": "Login bem sucedido",
       "tds_login_cancel": "Autorização cancelada",
-      "tds_login_failed": "登录失败",
+      "tds_login_failed": "Falha no login, por favor, tente novamente mais tarde",
       "tds_login_button_title":"Iniciar sessão com a %s",
       "tds_logout": "Desconectado",
       "tds_authorization_cancel": "Autorização cancelada",
@@ -435,7 +435,7 @@
       "tds_current_id": "ID：%s",
       "tds_copy_success": "Copier avec succès",
       "tds_cancel_bind": "Vous vous êtes délié",
-      "tds_unbind_error": "解绑失败",
+      "tds_unbind_error": "Annulation de la liaison échoué",
       "tds_bind_error_reason_format": "Liaison échouée. Le compte %s a déjà été lié",
       "tds_bind_error": "Liaison échouée",
       "tds_bind_success": "Liaison réussie",
@@ -447,7 +447,7 @@
       "tds_network_error_retry": "Erreur de réseau. Appuyez sur l'écran pour réessayer",
       "tds_login_success": "Connecté",
       "tds_login_cancel": "Autorisation révoquée",
-      "tds_login_failed": "登录失败",
+      "tds_login_failed": "Connexion échoué, veuillez réessayer",
       "tds_login_button_title":"Connexion avec %s",
       "tds_logout": "Déconnecté",
       "tds_authorization_cancel": "Autorisation révoquée",
@@ -516,7 +516,7 @@
       "tds_current_id": "ID：%s",
       "tds_copy_success": "Erfolgreich kopiert",
       "tds_cancel_bind": "Du hast entbunden",
-      "tds_unbind_error": "解绑失败",
+      "tds_unbind_error": "Entbinden fehlgeschlagen",
       "tds_bind_error_reason_format": "Fehler beim Verbinden. Der Account %s wurde bereits verbunden",
       "tds_bind_error": "Verbinden fehlgeschlagen",
       "tds_bind_success": "Erfolgreich verbunden",
@@ -528,7 +528,7 @@
       "tds_network_error_retry": "Netzwerkfehler. Tippe auf den Display, um es erneut zu versuchen",
       "tds_login_success": "Erfolgreich angemeldet",
       "tds_login_cancel": "Autorisierung widerrufen",
-      "tds_login_failed": "登录失败",
+      "tds_login_failed": "Anmeldung fehlgeschlagen, bitte erneut versuchen",
       "tds_login_button_title":"Mit %s anmelde",
       "tds_logout": "Abgemeldet",
       "tds_authorization_cancel": "Autorisierung widerrufen",
@@ -597,7 +597,7 @@
       "tds_current_id": "ID：%s",
       "tds_copy_success": "복사 성공",
       "tds_cancel_bind": "연동을 해제했습니다",
-      "tds_unbind_error": "解绑失败",
+      "tds_unbind_error": "연동 해제 실패",
       "tds_bind_error_reason_format": "연동 실패. 해당 %s 계정은 연동되어 있습니다",
       "tds_bind_error": "연동 실패",
       "tds_bind_success": "연동 성공",
@@ -609,7 +609,7 @@
       "tds_network_error_retry": "네트워크 오류, 화면을 터치하여 다시 시도하세요",
       "tds_login_success": "로그인 성공",
       "tds_login_cancel": "권한 부여 취소",
-      "tds_login_failed": "登录失败",
+      "tds_login_failed": "로그인 실패, 잠시 후 다시 시도해주세요",
       "tds_login_button_title":"%s 로 로그인",
       "tds_logout": "로그아웃 됐습니다",
       "tds_authorization_cancel": "권한 부여 취소",
@@ -678,7 +678,7 @@
     "tds_current_id": "ID：%s",
     "tds_copy_success": "コピーに成功しました",
     "tds_cancel_bind": "連携を解除しました",
-    "tds_unbind_error": "解绑失败",
+    "tds_unbind_error": "接続解除失敗",
     "tds_bind_error_reason_format": "連携に失敗しました。すでに %s と連携済みです",
     "tds_bind_error": "連携失敗",
     "tds_bind_success": "連携成功",
@@ -690,7 +690,7 @@
     "tds_network_error_retry": "ネットワークエラーが発生しました。画面をタップして再度お試しください",
     "tds_login_success": "ログインに成功しました",
     "tds_login_cancel": "権限のキャンセル",
-    "tds_login_failed": "登录失败",
+    "tds_login_failed": "ログイン失敗、再度お試しください",
     "tds_login_button_title":"%s でサインイン",
     "tds_logout": "既にログアウトしました",
     "tds_authorization_cancel": "権限のキャンセル",
@@ -772,7 +772,7 @@
     "tds_network_error_retry": "網路異常，點擊螢幕重試",
     "tds_login_success": "登錄成功",
     "tds_login_cancel": "授權已取消",
-    "tds_login_failed": "登錄失败",
+    "tds_login_failed": "登入失敗，請稍後重試",
     "tds_login_button_title":"使用 %s 登入",
     "tds_logout": "已退出登錄",
     "tds_authorization_cancel": "授權已取消",
@@ -852,7 +852,7 @@
     "tds_loading_error_retry": "Failed to load. Tap screen to try again",
     "tds_login_success": "Logged in",
     "tds_login_cancel": "Authorization revoked",
-    "tds_login_failed": "Failed to log in",
+    "tds_login_failed": "Login failed. Please try again",
     "tds_login_button_title":"Sign in with %s ",
     "tds_network_error_retry": "Network error. Tap screen to try again",
     "tds_logout": "Logged out",
@@ -934,7 +934,7 @@
     "tds_network_error_retry": "การเชื่อมต่อผิดพลาด กดที่หน้าจอเพื่อลองใหม่",
     "tds_login_success": "ล็อกอินสำเร็จ",
     "tds_login_cancel": "ยกเลิกการมอบอำนาจ",
-    "tds_login_failed": "พลาด การล็อกอินล้มเหลว",
+    "tds_login_failed": "ล็อกอินล้มเหลว กรุณาลองใหม่ภายหลัง",
     "tds_logout": "ล็อกเอ้าท์",
     "tds_login_button_title":"ลงชื่อเข้าด้วย %s ",
     "tds_authorization_cancel": "ยกเลิกการมอบอำนาจ",
@@ -1015,7 +1015,7 @@
     "tds_network_error_retry": "Jaringan tidak normal, klik layar untuk mencoba lagi\n",
     "tds_login_success": "Berhasil Login",
     "tds_login_cancel": "Otorisasi dibatalkan",
-    "tds_login_failed": "login gagal",
+    "tds_login_failed": "Login gagal. Coba lagi",
     "tds_logout": "Logout",
     "tds_login_button_title":"Masuk dengan %s ",
     "tds_authorization_cancel": "Otorisasi dibatalkan",
