--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -12,6 +12,7 @@
 
 
     <application
+            android:requestLegacyExternalStorage="true"
             android:networkSecurityConfig="@xml/network_security_config">
 
         <meta-data
