feat:更新android aar，更新TDSGlobalUser

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "com.tds.global": "file:../TDSGlobal",
-    "com.tds.sdk": "https://github.com/xindong/TAPSDK_UPM.git#1.0.6-alpha",
+    "com.tds.sdk": "https://github.com/xindong/TAPSDK_UPM.git#1.0.6",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.1",
