--- a/Assets/Plugins/iOS/Resource/TDSGlobal-Info.plist
+++ b/Assets/Plugins/iOS/Resource/TDSGlobal-Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>bundle_id</key>
+    <string>com.xd.sdkdemo1</string>
     <key>client_id</key>
     <string>hn5RcJei2JxCYlS0</string>
     <key>game_name</key>
