feat(android): update android 1.1.0 binary

--- a/Assets/Plugins/iOS/Resource/TDS-Info.plist
+++ b/Assets/Plugins/iOS/Resource/TDS-Info.plist
@@ -5,7 +5,7 @@
     <key>taptap</key>
     <dict>
         <key>client_id</key>
-        <string>uNS7fT9rTgG010leoG</string>
+        <string>jfqhF3x9mat70ez52i</string>
     </dict>
     
     <key>NSPhotoLibraryUsageDescription</key>
