--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -50,6 +50,12 @@
             <meta-data android:name="unityplayer.UnityActivity" android:value="true" />
         </activity>
 
+        <activity
+            android:name="com.taptap.sdk.TapTapActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:exported="false"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
+
         <service
             android:name="com.tds.xdg.core.firebase.TDSGlobalFirebaseMessagingService"
             android:exported="false">
