--- a/Assembly-CSharp-Editor-firstpass.csproj
+++ b/Assembly-CSharp-Editor-firstpass.csproj
@@ -91,11 +91,11 @@
  <Reference Include="UnityEditor.UI">
  <HintPath>/Users/xiaoyi/Documents/UnityProject/TDSGlobalUnity/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
  </Reference>
- <Reference Include="Unity.TextMeshPro.Editor">
- <HintPath>/Users/xiaoyi/Documents/UnityProject/TDSGlobalUnity/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+ <Reference Include="TapTap.TapDB.Editor">
+ <HintPath>/Users/xiaoyi/Documents/UnityProject/TDSGlobalUnity/Library/ScriptAssemblies/TapTap.TapDB.Editor.dll</HintPath>
  </Reference>
- <Reference Include="Unity.TextMeshPro">
- <HintPath>/Users/xiaoyi/Documents/UnityProject/TDSGlobalUnity/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+ <Reference Include="TapTap.Moment.Editor">
+ <HintPath>/Users/xiaoyi/Documents/UnityProject/TDSGlobalUnity/Library/ScriptAssemblies/TapTap.Moment.Editor.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine">
  <HintPath>/Applications/Unity/Hub/Editor/2019.4.1f1/Unity.app/Contents/Managed/UnityEngine/UnityEngine.dll</HintPath>
@@ -303,6 +303,12 @@
  </Reference>
  <Reference Include="TapTap.Login">
  <HintPath>/Users/xiaoyi/Documents/UnityProject/TDSGlobalUnity/Library/PackageCache/com.taptap.tds.login@cff64178e5/Plugins/TapTap.Login.dll</HintPath>
+ </Reference>
+ <Reference Include="TapTap.TapDB">
+ <HintPath>/Users/xiaoyi/Documents/UnityProject/TDSGlobalUnity/Library/PackageCache/com.taptap.tds.tapdb@eb3c8981f1/Plugins/TapTap.TapDB.dll</HintPath>
+ </Reference>
+ <Reference Include="TapTap.Moment">
+ <HintPath>/Users/xiaoyi/Documents/UnityProject/TDSGlobalUnity/Library/PackageCache/com.taptap.tds.moment@7db16fb283/Plugins/TapTap.Moment.dll</HintPath>
  </Reference>
  <Reference Include="nunit.framework">
  <HintPath>/Users/xiaoyi/Documents/UnityProject/TDSGlobalUnity/Library/PackageCache/com.unity.ext.nunit@1.0.6/net35/unity-custom/nunit.framework.dll</HintPath>
