--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,13 +3,14 @@
     "com.taptap.tds.bootstrap": "https://github.com/TapTap/TapBootstrap-Unity.git#2.1.6",
     "com.taptap.tds.common": "https://github.com/TapTap/TapCommon-Unity.git#2.1.6",
     "com.taptap.tds.login": "https://github.com/TapTap/TapLogin-Unity.git#2.1.6",
+    "com.taptap.tds.tapdb": "https://github.com/TapTap/TapDB-Unity.git#2.1.6",
+    "com.taptap.tds.moment": "https://github.com/TapTap/TapMoment-Unity.git#2.1.6",
     "com.tds.global": "file:../TDSGlobal",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.8",
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.test-framework": "1.1.24",
-    "com.unity.textmeshpro": "2.1.4",
     "com.unity.timeline": "1.2.18",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
