--- a/TDSGlobal/package.json
+++ b/TDSGlobal/package.json
@@ -7,8 +7,10 @@
     "author": "tds-develop",
     "license": "MIT",
     "dependencies": {
-        "com.taptap.tds.login": "https://github.com/TapTap/TapLogin-Unity.git#2.1.6",
+        "com.taptap.tds.bootstrap": "https://github.com/TapTap/TapBootstrap-Unity.git#2.1.6",
         "com.taptap.tds.common": "https://github.com/TapTap/TapCommon-Unity.git#2.1.6",
-        "com.taptap.tds.bootstrap": "https://github.com/TapTap/TapBootstrap-Unity.git#2.1.6"
+        "com.taptap.tds.login": "https://github.com/TapTap/TapLogin-Unity.git#2.1.6",
+        "com.taptap.tds.tapdb": "https://github.com/TapTap/TapDB-Unity.git#2.1.6",
+        "com.taptap.tds.moment": "https://github.com/TapTap/TapMoment-Unity.git#2.1.6"
     }
 }
