--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "unity": "2018.3",
   "license": "MIT",
   "dependencies": {
-    "com.leancloud.realtime": "https://github.com/leancloud/csharp-sdk-upm.git#realtime-0.9.2",
-    "com.leancloud.storage": "https://github.com/leancloud/csharp-sdk-upm.git#storage-0.9.2",
-    "com.taptap.tds.bootstrap": "https://github.com/TapTap/TapBootstrap-Unity.git#3.1.0",
-    "com.taptap.tds.common": "https://github.com/TapTap/TapCommon-Unity.git#3.1.0",
-    "com.taptap.tds.login": "https://github.com/TapTap/TapLogin-Unity.git#3.1.0",
-    "com.taptap.tds.tapdb": "https://github.com/TapTap/TapDB-Unity.git#3.1.0"
+    "com.leancloud.realtime": "git+https://github.com/leancloud/csharp-sdk-upm.git#realtime-0.9.2",
+    "com.leancloud.storage": "git+https://github.com/leancloud/csharp-sdk-upm.git#storage-0.9.2",
+    "com.taptap.tds.bootstrap": "git+https://github.com/TapTap/TapBootstrap-Unity.git#3.1.0",
+    "com.taptap.tds.common": "git+https://github.com/TapTap/TapCommon-Unity.git#3.1.0",
+    "com.taptap.tds.login": "git+https://github.com/TapTap/TapLogin-Unity.git#3.1.0",
+    "com.taptap.tds.tapdb": "git+https://github.com/TapTap/TapDB-Unity.git#3.1.0"
   }
 }
